--- a/project/public/css/index.css
+++ b/project/public/css/index.css
@@ -1922,6 +1922,7 @@ nav.navbar.navbar-expand-lg{
   border: solid 1px #d9d9d9;
   padding-left: 10px;
   color: #757575;
+  margin-top: 5px;
 }
 
 .text-area{
