--- a/project/public/assets/css/custom.css
+++ b/project/public/assets/css/custom.css
@@ -51,13 +51,14 @@
 .bg-gray{
     background-color: #ddd;
 }
-#layoutSidenav{
-    height: 100% !important;
-}
+
 
 .sb-sidenav .sb-sidenav-menu {
     flex-grow: 1;
     background-color: #f88634;
+    width: 350px;
+    padding: 40px 19px 393px 30px;
+    height: 100%;
 }
 
 .sb-sidenav .sb-sidenav-menu .nav .nav-link{
@@ -110,3 +111,122 @@
     height: 28px;
     width: 38px !important;
 }
+
+.user-table{
+    border: 1px solid #d9d9d9;
+}
+
+.user-table th{
+    width: 1512px;
+    height: 70px;
+    margin: 30px 42px 500px 29px;
+    padding: 30px 25px 22px 30px;
+    border-bottom: solid 1px #d9d9d9;
+    background-color: #f8f9fc;
+    font-size: 22px;
+    font-weight: normal;
+    font-family: sans-serif;
+}
+.user-table td{
+    height: 65px;
+    margin: 30px 42px 500px 29px;
+    padding: 20px 25px 10px 30px;
+    font-size: 16px;
+    font-family: sans-serif;
+}
+
+.cms-table th{
+    width: 1512px;
+    height: 70px;
+    margin: 30px 42px 500px 29px;
+    padding: 30px 25px 22px 30px;
+    border-bottom: solid 1px #d9d9d9;
+    background-color: #f8f9fc;
+    font-size: 22px;
+    font-weight: normal;
+    font-family: sans-serif;
+}
+
+.cms-table td{
+    height: 65px;
+    margin: 30px 42px 500px 29px;
+    padding: 20px 25px 30px 30px;
+    font-size: 16px;
+    font-family: sans-serif;
+}
+
+.cms-table{
+    border: 1px solid #d9d9d9;
+    margin: 48px 43px 20px 29px;
+}
+
+.cms-input {
+    width: 100%;
+    height: 38px;
+    border-radius: 3px;
+    box-shadow: 1px 0.3px 3px 0 rgba(0, 0, 0, 0.05);
+    border: solid 1px #d9d9d9;
+    padding-left: 10px;
+    color: #757575;
+    margin-top: 5px;
+  }
+
+  .cms-label {
+    width: 29px;
+    height: 13px;
+    margin-top: 20px;
+    font-family: sans-serif;
+    font-size: 15px;
+    font-weight: 300;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: left;
+    color: #414141;
+  }
+
+  .tox .tox-statusbar {
+    display: none !important;
+  }
+ 
+  .tox .tox-toolbar-overlord .tox-toolbar:not(.tox-toolbar--scrolling):first-child, .tox .tox-toolbar-overlord .tox-toolbar__primary{
+    background-color:   #f8f9fc;
+  }
+  .tox:not(.tox-tinymce-inline) .tox-editor-header{
+    background-color:  #f8f9fc !important;
+  }
+  .tox-tinymce{
+    border:1px solid #d9d9d9 !important;
+  }
+
+  .cms_btn1{
+    width: 100px;
+    height: 48px;
+    border-radius: 24px;
+    border: solid 2px #757575;
+    text-align: center;
+    background-color: white;
+    font-size: 17px;
+   
+  }
+  
+  .cms_btn2{
+    margin-top:10px ;
+    font-size: 17px;
+    width: 100px;
+    height: 48px;
+    border-radius: 24px;
+    border: solid 2px #f88634;
+    text-align: center;
+    background-color: white;
+    font-size: 17px;
+    color: #f88634;
+  }
+  
+  .cms_btn{
+    /* margin-left: 340px; */
+    float: right;
+    margin-bottom: 10px;
+    margin-right: 40px;
+  }
