--- a/project/public/assets/css/admin.css
+++ b/project/public/assets/css/admin.css
@@ -79,5 +79,270 @@
     background-color: #fff;
     color: #f88634;
 }
+@media (max-width:768px) {
+  .sb-sidenav .sb-sidenav-menu .nav .nav-link.active{
+    width: 225px;
+  }
+}
 
 
+#layoutSidenav {
+  display: flex;
+
+}
+#layoutSidenav #layoutSidenav_nav {
+  flex-basis: 225px;
+  flex-shrink: 0;
+  transition: transform 0.15s ease-in-out;
+  z-index: 1038;
+  transform: translateX(-225px);
+}
+
+#layoutSidenav #layoutSidenav_content {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-width: 0;
+  flex-grow: 1;
+  min-height: calc(100vh - 56px);
+  margin-left: -225px;
+}
+
+
+@media (max-width:768px) {
+  #layoutSidenav #layoutSidenav_nav{
+    flex-basis: 350px;
+    transform: translateX(-350px);
+  }
+  #layoutSidenav #layoutSidenav_content{
+    margin-left: -350px;
+  }
+}
+
+.sb-sidenav-toggled #layoutSidenav #layoutSidenav_nav {
+  transform: translateX(0);
+}
+.sb-sidenav-toggled #layoutSidenav #layoutSidenav_content:before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  z-index: 1037;
+  opacity: 0.5;
+  transition: opacity 0.3s ease-in-out;
+}
+
+@media (min-width: 992px) {
+  #layoutSidenav #layoutSidenav_nav {
+    transform: translateX(0);
+  }
+  #layoutSidenav #layoutSidenav_content {
+    margin-left: 0;
+    transition: margin 0.15s ease-in-out;
+  }
+
+  .sb-sidenav-toggled #layoutSidenav #layoutSidenav_nav {
+    transform: translateX(-350px);
+  }
+  .sb-sidenav-toggled #layoutSidenav #layoutSidenav_content {
+    margin-left: -350px;
+  }
+  .sb-sidenav-toggled #layoutSidenav #layoutSidenav_content:before {
+    display: none;
+  }
+}
+.sb-nav-fixed .sb-topnav {
+  z-index: 1039;
+}
+.sb-nav-fixed #layoutSidenav #layoutSidenav_nav {
+  width: 225px;
+  height: 100vh;
+  z-index: 1038;
+}
+.sb-nav-fixed #layoutSidenav #layoutSidenav_nav .sb-sidenav {
+  padding-top: 56px;
+}
+.sb-nav-fixed #layoutSidenav #layoutSidenav_nav .sb-sidenav .sb-sidenav-menu {
+  overflow-y: auto;
+}
+.sb-nav-fixed #layoutSidenav #layoutSidenav_content {
+  padding-left: 225px;
+  top: 56px;
+}
+
+.cms-pupop-text{
+  width: 473px;
+  height: 25px;
+  font-family: sans-serif;
+  font-size: 24px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: center;
+  color: #333;
+  margin-left: 30px;
+
+}
+
+.popup-btn{
+  margin-left:250px ;
+  font-size: 17px;
+  margin-bottom: 20px;
+}
+.popup-btn2{
+  width: 100px;
+  height: 48px;
+  border-radius: 24px;
+  border: solid 2px #f88634;
+  text-align: center;
+  /* padding: 10px; */
+  color: #f88634;
+  background-color: white;
+}
+
+.popup-btn1{
+  width: 100px;
+  height: 48px;
+  border-radius: 24px;
+  border: solid 2px #757575;
+  text-align: center;
+  background-color: white;
+  font-size: 17px;
+}
+
+.popup-title{
+  width: 155px;
+  height: 18px;
+  font-family: sans-serif;
+  font-size: 22px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: left;
+  color: #414141;
+  margin-left: 30px;
+}
+
+
+.story-td-btn{
+  width: 48px;
+  height: 25px;
+  /* margin: 0 27px 18px 113px;
+  padding: 8px 11px 7px 10px; */
+  border-radius: 12.5px;
+  border: solid 1px #f88634;
+  background-color: white;
+  color: #f88634;
+  font-size: 12px;
+  font-family: sans-serif;
+ 
+}
+
+
+.cms-text{
+  /* width: 121px; */
+  height: 15px;
+  margin: 0px 155px 15px 550px;
+  font-family: sans-serif;
+  font-size: 14px;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: left;
+  color: #757575;
+}
+
+
+
+.cms-text-1{
+  /* width: 121px; */
+  height: 15px;
+  margin: 0px 155px 15px 500px;
+  font-family: sans-serif;
+  font-size: 14px;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: left;
+  color: #757575;
+}
+
+.mission-img{
+  width: 26px;
+  height: 20px;
+  margin: 15px 271px 2px 600px;
+  object-fit: contain
+}
+
+
+.dragBox {
+  width: 100%;
+  height: 100px;
+  margin: 0 auto;
+  position: relative;
+  text-align: center;
+  font-weight: bold;
+  line-height: 95px;
+  color: #999;
+  border: 2px dashed #ccc;
+  display: inline-block;
+  transition: transform 0.3s;}
+
+  .drag-nav {
+  width: 100%;
+  height: 120px;
+  margin: 6px 3px 30px 0;
+  padding: 6px 48px 17px 13px;
+  border-radius: 3px;
+  box-shadow: 1px 0.3px 3px 0 rgba(0, 0, 0, 0.05);
+  border: solid 1px #d9d9d9;
+  background-color: #fff;
+  display: inline-grid;
+}
+
+ .dragBox input[type="file"] {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    top: 0;
+    left: 0;
+  
+}
+
+.dragBox-1 input[type="file"] {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  top: 0;
+  left: 0;
+
+}
+
+.draging {
+  transform: scale(1.1);
+}
+#preview {
+  text-align: center;}
+  img-9 {
+    max-width: 100%
+  }
+
+  .delete-btn{
+    border: none;
+    background-color: white;
+  }
