--- a/project/public/assets/css/admin.css
+++ b/project/public/assets/css/admin.css
@@ -35,7 +35,7 @@
     border: none;
     font-size: 14px;
     font-family: sans-serif;
-    height: 100%;
+    height: 45px;
     width: 350px;
 }
 
