--- a/project/public/css/index.css
+++ b/project/public/css/index.css
@@ -355,6 +355,9 @@ a{
   padding-left: 30px;
   padding-right: 30px;
 }
+.list-des{
+  height: 100px;
+}
 
 .card-button {
   font-size: 17px;
@@ -660,6 +663,11 @@ padding: 5px 150px 4px -10px;
   }
 }
 
+.clear{
+  border: none;
+  background-color: white;
+}
+
 @media (max-width:768px) {
   .nav-2{
     padding-left: 30px;
@@ -667,11 +675,12 @@ padding: 5px 150px 4px -10px;
   }
   .nav-2-items{
     padding-right: 0px;
-    width: 0px;
+    width: 90px;
   }
 
   .City{
     padding-left: 0px;
+    box-shadow: none;
   }
 }
 
@@ -816,9 +825,17 @@ padding: 5px 150px 4px -10px;
 }
 
 .Grid-list {
-
-  padding: 10px;
+  padding: 7px;
   /* margin: 0 5px 0 20px; */
+}
+.grid{
+  border-radius: 30px;
+  background-color:#e8e8e8;
+  margin-left: 20px;
+}
+
+.list{
+  background-color: #e8e8e8;
 }
 
 .Rounded-Rectangle-8 {
@@ -1369,7 +1386,7 @@ text-align: center
 .pin{
   width: 100%;
   height: 130px;
-  padding: 10px 84px 18px 9px;
+  padding: 10px 30px 18px 9px;
   border-radius: 3px;
   border: solid 1px #e8e8e8;
   background-color: #fff;
@@ -1383,7 +1400,6 @@ text-align: center
 .vol-button{
   font-size: 20px;
   padding: 10px 10px 10px 10px;
-  /* border-radius: 24px; */
   border: 2px solid #f88634;
   color: #f88634;
   margin-top: 15px;
@@ -1601,10 +1617,12 @@ width: 250px;
 .text-2{
   font-family: sans-serif;
   font-size: 13px;
-  width: 100px;
+  width: 105px;
   margin-left: -10px;
 }
-
+.tox .tox-statusbar{
+  display: none !important;
+}
 td{
   padding-right: 25px;
   padding-left: 25px;
@@ -2331,7 +2349,7 @@ strong {
 }
 
 .story-text-2{
-  width: 120px;
+  width: 145px;
   height: 17px;
   margin-left: 10px;
   font-family: sans-serif;
