--- a/project/public/assets/css/styles.css
+++ b/project/public/assets/css/styles.css
@@ -5532,6 +5532,12 @@ textarea.form-control-lg {
   max-height: 100%;
   overflow: hidden;
 }
+
+.modal-dialog-scrollable .modal-content1 {
+  max-height: 100%;
+  overflow: hidden;
+}
+
 .modal-dialog-scrollable .modal-body {
   overflow-y: auto;
 }
@@ -5543,6 +5549,22 @@ textarea.form-control-lg {
 }
 
 .modal-content {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  pointer-events: auto;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 0.3rem;
+  outline: 0;
+  top: 150px;
+  width: 634px;
+  height: 248px;
+}
+
+.modal-content1 {
   position: relative;
   display: flex;
   flex-direction: column;
@@ -5653,6 +5675,13 @@ textarea.form-control-lg {
   border: 0;
   border-radius: 0;
 }
+
+.modal-fullscreen .modal-content1 {
+  height: 100%;
+  border: 0;
+  border-radius: 0;
+}
+
 .modal-fullscreen .modal-header {
   border-radius: 0;
 }
@@ -5675,6 +5704,13 @@ textarea.form-control-lg {
     border: 0;
     border-radius: 0;
   }
+
+  .modal-fullscreen-sm-down .modal-content1 {
+    height: 100%;
+    border: 0;
+    border-radius: 0;
+  }
+
   .modal-fullscreen-sm-down .modal-header {
     border-radius: 0;
   }
@@ -5693,6 +5729,11 @@ textarea.form-control-lg {
     margin: 0;
   }
   .modal-fullscreen-md-down .modal-content {
+    height: 100%;
+    border: 0;
+    border-radius: 0;
+  }
+  .modal-fullscreen-md-down .modal-content1 {
     height: 100%;
     border: 0;
     border-radius: 0;
@@ -5719,6 +5760,11 @@ textarea.form-control-lg {
     border: 0;
     border-radius: 0;
   }
+  .modal-fullscreen-lg-down .modal-content1 {
+    height: 100%;
+    border: 0;
+    border-radius: 0;
+  }
   .modal-fullscreen-lg-down .modal-header {
     border-radius: 0;
   }
@@ -5741,6 +5787,13 @@ textarea.form-control-lg {
     border: 0;
     border-radius: 0;
   }
+
+  .modal-fullscreen-xl-down .modal-content1 {
+    height: 100%;
+    border: 0;
+    border-radius: 0;
+  }
+
   .modal-fullscreen-xl-down .modal-header {
     border-radius: 0;
   }
@@ -5759,6 +5812,11 @@ textarea.form-control-lg {
     margin: 0;
   }
   .modal-fullscreen-xxl-down .modal-content {
+    height: 100%;
+    border: 0;
+    border-radius: 0;
+  }
+  .modal-fullscreen-xxl-down .modal-content1 {
     height: 100%;
     border: 0;
     border-radius: 0;
