--- a/project/public/css/index.css
+++ b/project/public/css/index.css
@@ -449,6 +449,17 @@ a{
   margin-bottom: 20px;
 }
 
+
+#selectSkill{
+  border-right: solid 1px #ced4da;
+}
+
+@media (max-width:768px) {
+  #selectSkill{
+    border: none;
+  }
+}
+
 .card-div-1{
   height: 150px;
   padding-left: 10px;
@@ -460,7 +471,7 @@ a{
 
 @media (max-width:992px) {
   .card-div-1{
-    height: 120px;
+    height: 240px;
   }
   .card-div-2{
     height: 75px;
@@ -489,7 +500,7 @@ a{
 
 @media (max-width:992px) {
   .card-title{
-    height: 75px;
+    height: 100px;
   }
 }
 
@@ -2489,9 +2500,9 @@ strong {
 
 .parent .half-fade{
   position: absolute;
-  top: 5px;
-  left: 145px;
-  background-color: #333;
+  top: -55px;
+  left: 27px;
+  background-color: black;
   opacity: 0.8;
   height: 115px;
   width: 25px;
@@ -2499,6 +2510,10 @@ strong {
   padding-top: 45px
 }
 
+.edit-btn{
+  border: none;
+  background: none;
+}
 @media (max-width:992px) {
   .parent .half-fade{
     left: 90px;
@@ -2507,10 +2522,9 @@ strong {
 
 .parent .half-fade-1{
   position: absolute;
-  top: 5px;
-  left: 0px;
-  background-color: #333;
-  opacity: 0.8;
+  top: -55px;
+  left: -50px;
+  background-color: black;
   height: 115px;
   width: 25px;
   text-align: center;
