--- a/project/public/assets/css/admin.css
+++ b/project/public/assets/css/admin.css
@@ -131,7 +131,7 @@
   justify-content: space-between;
   min-width: 0;
   flex-grow: 1;
-  min-height: calc(100vh - 56px);
+  min-height: calc(100vh );
   margin-left: -225px;
 }
 
