--- a/project/public/css/index.css
+++ b/project/public/css/index.css
@@ -2758,7 +2758,7 @@ strong {
   border-radius: 3px;
   box-shadow: 1px 0.3px 3px 0 rgba(0, 0, 0, 0.05);
   border: solid 1px #d9d9d9;
-
+ color: #757575;
 }
 
 
