--- a/project/public/css/index.css
+++ b/project/public/css/index.css
@@ -14,15 +14,17 @@
 /* end css for body */
 
  /* for login and reset page  */
- .img{
-  height: 750px;
-  width: 100%;
-}
+
 
 @media (max-width:1920px) {
   .img{
     height: 960px;
   }
+}
+
+.img{
+  height: 780px;
+  width: 100%;
 }
 
 .form-control{
@@ -32,6 +34,11 @@
 @media (max-width:1920px) {
   .form-control{
     height: 56px;
+  }
+}
+@media (max-width:1440px) {
+  .form-control{
+    height: 45px;
   }
 }
 .btn{
@@ -257,6 +264,11 @@ font-size: 20px;
   color: white;
   justify-content: center;
 }
+@media (max-width:1440px) {
+  .bottom{
+    left:-90px
+  }
+}
 .text{
   width: 615px;
   height: 95px;
@@ -308,9 +320,6 @@ font-size: 20px;
   .text{
     width: 300px;
     height: 232px;
-  }
-  .img{
-    height: 636px;
   }
   .bottom{
     bottom: 215px;
@@ -1065,7 +1074,7 @@ padding: 5px 150px 4px -10px;
  
 }
 .footer-login{
-  margin: 250px 0px 50px 0px;
+  margin: 155px 0px 50px 0px;
   font-family: sans-serif;
   font-size: 15px;
   font-weight: 300;
@@ -1081,7 +1090,6 @@ padding: 5px 150px 4px -10px;
   color: black;
 }
 .footer-reg{
- 
   margin: 120px 0px 50px 0px;
   font-family: sans-serif;
   font-size: 14px;
@@ -1092,6 +1100,12 @@ padding: 5px 150px 4px -10px;
   letter-spacing: normal;
   text-align: center;
   color: #414141;
+}
+
+@media (max-width:1440px) {
+  .footer-reg{
+    margin: 10px 0px 10px 0px;
+  }
 }
 
 .pagination li a:hover{
@@ -1375,7 +1389,7 @@ padding: 5px 150px 4px -10px;
 } */
 
 .btn1{
-  width: 100%;
+  width: max-content;
   border-radius: 15px;
   background: transparent;
   color: grey;
@@ -1384,7 +1398,9 @@ padding: 5px 150px 4px -10px;
 border-radius: 30px;
 height: 50px;
 padding-top: 10px;
-text-align: center
+text-align: center;
+padding-left: 10px;
+padding-right: 10px;
 }
 
 @media (max-width:768px) {
@@ -1665,9 +1681,9 @@ width: 250px;
 
 .recent-vol{
   width: 461px;
-  height: 400px;
+  height: auto;
   margin: 58px 240px 40px 120px;
-  padding: 30px 31px 24px;
+  padding: 30px 31px 0px 30px;
   border: solid 1px #e8e8e8;
 }
 
@@ -1700,19 +1716,21 @@ width: 250px;
 .recent-vol-img{
   width: 50px;
   height: 50px; 
-  border-radius:50% 
+  border-radius:50%;
+  margin-top: 10px;
 }
 .text-2{
   font-family: sans-serif;
   font-size: 13px;
   width: 105px;
   margin-left: -10px;
+  margin-bottom: 10px;
 }
 .tox .tox-statusbar{
   display: none !important;
 }
 td{
-  padding-right: 25px;
+  margin-right: 25px;
   padding-left: 25px;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -1942,7 +1960,7 @@ nav.navbar.navbar-expand-lg{
   padding-left: 0px;
 }
 
-.nav-tabs-2 .nav-item .nav-link.nav-detail{
+.nav-detail{
 
   font-family: sans-serif;
   font-size: 22px;
@@ -2190,7 +2208,7 @@ nav.navbar.navbar-expand-lg{
 
 .container-fluid{
   position: relative;
-  padding: 0;
+  padding-left: 0px;
 }
 
 
@@ -2501,10 +2519,11 @@ strong {
 
 
 .story-detail-button{
-  width: 100%;
-  height: 60px;
+  width: auto;
+  height: 50px;
   background: transparent;
-  padding: 0px;
+  padding-left: 10px;
+  padding-right: 10px;
   font-size: 20px;
   color: grey;
   cursor: pointer;
@@ -2513,13 +2532,13 @@ strong {
 }
 
 .story-detail-button-text{
-  font-size: 20px;
+  font-size: 18px;
   font-family: sans-serif;
 }
 
 .story-detail-button1{
-  height: 60px;
-  padding-top: 10px;
+  height: 50px;
+  padding-top: 5px;
   width: 100%;
   border: 2px solid #f88634;
   color: #f88634;
@@ -2765,7 +2784,7 @@ strong {
     }
 
  .profile-text{
-
+  width: max-content;
   height: 17px;
   font-family: sans-serif;
   font-size: 22px;
@@ -2925,7 +2944,7 @@ textarea{
 
 @media (max-width:425px) {
   .edit-profile-button-save{
-    margin-left: 270px;
+    margin-left: 95px;
   }
   .body-3{
     padding: 0;
