--- a/project/public/css/index.css
+++ b/project/public/css/index.css
@@ -1388,6 +1388,27 @@ padding: 5px 150px 4px -10px;
   }
 } */
 
+.vol-comment{
+  width: 100%;
+  color: #757575;
+  height: 100px;
+  padding: 10px;
+  border: 1px solid #b4afaf;
+  border-radius: 5px;
+}
+
+.comment-btn{
+  border: 2px solid #f88634;
+  border-radius: 25px;
+  height: 40px;
+  width: max-content;
+  padding-left: 10px;
+  padding-right: 10px;
+  color: #f88634;
+  font-size: 15px;
+  font-family: sans-serif;
+  background: none;
+}
 .btn1{
   width: max-content;
   border-radius: 15px;
@@ -1408,7 +1429,18 @@ padding-right: 10px;
     margin-bottom: 5px;
   }
 }
+.com-img{
+  border-radius: 100%;
+  height: 80px;
+  width: 80px;
+  margin-top: 10px;
+  margin-left: 20px;
+}
 
+.remove-tag{
+  border: none;
+  background: none;
+}
 .vol-fav{
   width: 132px;
   height: 13px;
@@ -2076,6 +2108,9 @@ nav.navbar.navbar-expand-lg{
   @media (max-width:425px) {
     .nav-tabs{
       width: 400px;
+    }
+    .nav-tabs-1{
+      width: 345px;
     }
 
     .nav-tabs-2{
