--- a/project/public/assets/css/admin.css
+++ b/project/public/assets/css/admin.css
@@ -384,6 +384,8 @@
   .delete-btn{
     border: none;
     background-color: white;
+    padding-bottom: 10px;
+    display: inline-flex;
   }
 
   .admin-search:focus{
