--- a/project/public/css/index.css
+++ b/project/public/css/index.css
@@ -857,6 +857,7 @@ padding: 5px 150px 4px -10px;
   position: relative;
   display: flex;
   margin-left: auto;
+  margin-right: 90px;
 }
 
 .explore-dark {
@@ -1108,6 +1109,49 @@ padding: 5px 150px 4px -10px;
   }
 }
 
+.pagination1 li a:hover{
+  background-color: #f88634;
+  text-align: center;
+}
+
+.pagination1 .active{
+  background-color: #f88634;
+  border-color: #f88634;
+  color: white !important;
+}
+
+.pagination1 .active a:hover{
+  background-color: #f88634;
+}
+
+.pagination1 li a{
+  margin: 10px;
+
+}
+.pagination1 {
+
+  text-align: center;
+  margin: 16px 0;
+}
+
+@media (max-width:992px) {
+  .pagination1{
+    padding-left: 280px;
+  }
+}
+
+@media (max-width:768px) {
+  .pagination1{
+    padding-left: 175px;
+  }
+}
+
+@media (max-width:425px) {
+  .pagination1{
+    padding-left: 0px;
+  }
+}
+
 .pagination li a:hover{
   background-color: #f88634;
   text-align: center;
@@ -1150,7 +1194,6 @@ padding: 5px 150px 4px -10px;
     padding-left: 0px;
   }
 }
-
 .page-item .page-link{
   border-radius: 4px;
   color: #757575;
@@ -1159,7 +1202,6 @@ padding: 5px 150px 4px -10px;
 }
 
 .footer-button{
-  
     width: 51px;
     height: 17px;
     font-family: Myriad Pro;
@@ -2144,7 +2186,7 @@ nav.navbar.navbar-expand-lg{
   background-color: #333;
   width: 100%;
   height: 400px;
-  padding-top: 165px;
+  padding-top: 120px;
 }
 
 .above-image{
@@ -2683,6 +2725,7 @@ strong {
 .edit-btn{
   border: none;
   background: none;
+  display:inline-grid !important;
 }
 
 @media (max-width:1440px) {
@@ -2833,6 +2876,11 @@ strong {
   margin-top: 10px;
  }
 
+ @media (max-width:1440px) {
+  .profile-text{
+    margin-left: 30px;
+  }
+ }
  @media (max-width:768px) {
   .profile-text{
     width: 117px;
@@ -3646,7 +3694,10 @@ width: 800px;
   }
 }
 
-
+.edit-vol{
+  margin-left: 150px;
+  margin-right: 150px;
+}
 .story-upload{
   margin: 10px;
   height: 100px;
@@ -3671,6 +3722,11 @@ width: 800px;
   margin-top: 30px;
 }
 
+@media (max-width:1440px) {
+  .edit-profile{
+    padding: 31px 75px 307px 40px;
+  }
+}
 @media (max-width:992px) {
   .edit-profile{
     padding-left: 20px;
