--- a/project/public/css/index1.css
+++ b/project/public/css/index1.css
@@ -14,7 +14,7 @@
   }
 .div-vol{
     width: 705px;
-    height: 455px;
+    height: max-content;
     margin: 26px 30px 25px 20px;
     /* padding: 24px 29px 292px 25px; */
     box-shadow: 0px 2px 3px 0 rgba(0, 0, 0, 0.06);
